Fix for online api repo